fix overflow problems using flexbox

--- a/db/static/stylesheets/style.css
+++ b/db/static/stylesheets/style.css
@@ -1,24 +1,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
+* {box-sizing: border-box}
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+.mySlides {display: none}
+img {vertical-align: middle;}
 
-/* Style for links */
 a {
-  background-color: #d1d1d1;
-  float: left;
-  color: #1f1f1f;
+  background-color: #0065a3;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 14px;
+  font-weight: normal;
+  color: white;
 }
 
-/* Change the color of links on hover */
-a:hover {
-  background-color: #ddd;
-  color: black;
+/* Margins for main part of page */
+.main {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 150px;
+  margin-left: 150px;
+  border-bottom-style: solid;
+  border-color: grey;
 }
 
 /* Add a top navigation bar */
@@ -27,32 +33,35 @@ a:hover {
   font-size: 50px;
   font-weight: 400;
   font-family: helvetica;
-  overflow: hidden;
+  overflow: visible;
   border-bottom-style: solid;
   border-color: grey;
-  margin-top: 30px;
+  margin-top: 40px;
   margin-bottom: 15px;
-  margin-right: 40px;
-  margin-left: 40px;
+  margin-right: 50px;
+  margin-left: 50px;
   padding-bottom: 30px;
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .topnav a {
-  float: right;
   background-color: #ffffff;
   text-align: center;
-  padding: 14px 16px;
+  padding: 12px 14px;
   text-decoration: none;
   font-size: 14px;
   font-weight: normal;
+  color: black;
 }
 .topnav button {
-  float: right;
+  white-space: nowrap;
   background-color: #ffffff;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 14px;
+  padding: 12px 14px;
+  font-size: 13px;
   font-weight: normal;
   border-style: none;
 }
@@ -73,16 +82,52 @@ a:hover {
   color: white;
 }
 
-/* Slideshow stuff */
-<meta name="viewport" content="width=device-width, initial-scale=1">
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
+.dropdown {
+  display: inline-block;
+  position: relative
+}
+
+.dropdown a{
+  vertical-align: top;
+  display: inline-block;
+  position: relative
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  top: 40px;
+  left: 0px;
+}
+
+.dropdown-content a {
+  background-color: #0065a3;
+  color: white;
+  float: none;
+  padding: 12px 16px;
+  text-decoration: none;
+  text-align: left;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #0065a3;
+  color: #6698b5;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 400px;
+  max-width: 800px;
+  max-height: 400px;
+  overflow: hidden;
   position: relative;
   margin: auto;
 }
